--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "redis": "^4.6.12",
-    "axios": "^1.6.2",
-    "dotenv": "^16.3.1"
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
